@@ -1,6 +1,8 @@
 What's New in IDLE 3.2.4?
 =========================
 
+- Issue #7163: Propagate return value of sys.stdout.write.
+
 - Issue #15318: Prevent writing to sys.stdin.
 
 - Issue #13532, #15319: Check that arguments to sys.stdout.write are strings.
